[gd_scene load_steps=3 format=3 uid="uid://cnrxitnkh0kqm"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_a2iem"]
[ext_resource type="Texture2D" uid="uid://cdrnwjamutuh6" path="res://assets/backgrounds/brown.png" id="2_jp30h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2iem")
metadata/_edit_vertical_guides_ = [320.0]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_jp30h")
stretch_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -52.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Game Name Go Here"
horizontal_alignment = 1

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 12.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "START!"

[node name="Levels" type="Button" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 44.0
text = "LEVELS"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -44.0
offset_right = 104.0
offset_bottom = -8.0
grow_vertical = 0
text = "QUIT"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="tree_exited" from="Title" to="." method="_on_title_tree_exited"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
